Fixed modal shifting in mobile view.

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -45,6 +45,8 @@ thead {
 
 .modal-dialog {
     width: 360px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
 
 .modal-header {
